# urban-mtmc

./: .gitignore  CONTRACT.md  README.md  pyproject.toml
.claude/: launch.json
docs/: build-roadmap.html  codebase-explained.html  complete-course.html  mantis-decoded.html  mtmc-mechanics.html  urban-mtmc-manual.html
floorplan/: plan.json
src/mtmc/: __init__.py  camera.py  detector.py  events.py  get_model.py  server.py  simulator.py  tracker.py
tests/: test_camera.py  test_detector.py  test_server.py  test_simulator.py  test_tracker.py
web/: app.js  index.html  style.css
