[project]
name = "mtmc"
version = "0.1.0"
description = "Urban multi-camera people tracking — M0: floor-plan simulator + live dashboard"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "onnxruntime>=1.18",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "httpx>=0.27",       # fastapi test client
]

[project.scripts]
mtmc-server = "mtmc.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtmc"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
